Per-tick shared caching for script/renderer engine + machine flags gating + conveyor/UI restructuring
- ScriptContext: real defensive-copy builder.build() with cheap peek() view for
  ephemeral per-statement reads; dependency-tracked getVar via TRACKED_VARS.
- ScriptProgram: dependency-tracked topLevelCacheable fast path (imports/defs/
  constant assigns) beyond the old pureDefs-only case.
- RendererManager: shared cross-instance formula cache keyed by real tracked
  dependencies (rpm, facing, redstone, etc.) instead of a text denylist;
  update_when/when gating via UpdateWhen/WhenCondition; ServerLevel threaded
  through resolveSpecLocation.
- BlockType: per-tick property read cache with immediate write-through on
  set_property/cycle_prop instead of pure invalidation.
- ScriptRegistry: parallel .pf file load/parse at startup/reload.
- ScriptBootstrap: centralized globalSingletons() map, replacing ~15 duplicated
  typed(...) chains across item/machine/menu/task call sites.
- MachineFlags: explicit per-machine capability flags (recipes/fuel/ui/uiTick/
  ioPull/renderers/scripts/animations/continuousFuel/kinetics/redstone),
  default all-false, backfilled across machine JSON defs; DataMachineBlockEntity
  gates tick work and caches neighbor redstone signal poll per-tick accordingly.
- AbstractMachineBlockEntity: BlockState-reference-equality facing/axis cache.
- Conveyor package restructured into belt/depot/routing subpackages; funnel
  behaviors removed.
- VirtualUI: expanded widget/animation support per xqedii UI docs review.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>