@@ -28,8 +28,39 @@ public final class ScriptContext {
         this.classInstances = classInstances;
     }
 
+    /** Set only while {@link #beginTracking} is active — records every {@code getVar} name read
+     *  during that window, so a caller can determine EXACTLY which context variables a given
+     *  formula string actually depends on (used by {@code RendererManager}'s cross-instance shared-
+     *  formula cache to build a precise cache key instead of guessing via a text denylist). A
+     *  ThreadLocal, not an instance field, since a single formula string is evaluated against many
+     *  DIFFERENT ScriptContext instances over its lifetime — tracking belongs to the CALL, not to
+     *  any one context object. */
+    private static final ThreadLocal<java.util.Set<String>> TRACKED_VARS = new ThreadLocal<>();
+
+    /** Starts recording every {@code getVar} name read on this thread until {@link #endTracking}.
+     *  Returns the (initially empty, then live-mutated) set that will hold them. */
+    public static java.util.Set<String> beginTracking() {
+        java.util.Set<String> set = new java.util.HashSet<>();
+        TRACKED_VARS.set(set);
+        return set;
+    }
+
+    public static void endTracking() {
+        TRACKED_VARS.remove();
+    }
+
     public ScriptValue getVar(String name) {
-        return vars.getOrDefault(name, ScriptValue.NULL);
+        ScriptValue v = vars.getOrDefault(name, ScriptValue.NULL);
+        java.util.Set<String> tracked = TRACKED_VARS.get();
+        // Only counts as a real dependency if the name actually resolved to something — every
+        // builtin-function CALL (sin(...), CraftEngineItem(...), tick(), ...) does a getVar(name)
+        // first to check for a user-defined override (see ScriptFormula#callBuiltin), which would
+        // otherwise pollute tracking with the FUNCTION's own name for every formula that calls any
+        // builtin at all, even a pure-literal one like CraftEngineItem("cml:foo") that has NO real
+        // context dependency. A not-found lookup can't have influenced the result, so it's not
+        // tracked — this is what lets a formula like that be recognized as fully shareable.
+        if (tracked != null && v != ScriptValue.NULL) tracked.add(name);
+        return v;
     }
 
     public ScriptValue getClassInstance(String name) {
@@ -78,10 +109,29 @@ public final class ScriptContext {
             return this;
         }
 
+        /** Bulk-merges a precomputed name->value map straight into {@code vars} — the vars-side
+         *  counterpart of {@link #typedAll} for {@code classes}. Used by {@link ScriptProgram}'s
+         *  cached pure-defs fast path (see {@code ScriptProgram#cachedDefsContext}) to splice a
+         *  once-computed set of function bindings into a live per-call context cheaply. */
+        public Builder valsAll(Map<String, ScriptValue> precomputed) {
+            if (precomputed != null) vars.putAll(precomputed);
+            return this;
+        }
+
         public Builder typed(String className, Object instance) {
             if (instance != null) {
                 classes.put(className, ScriptValue.ofObj(className, instance));
             }
+            return this;
+        }
+
+        /** Bulk-merges a precomputed name->value map straight in — for callers on a hot per-tick
+         *  path binding a fixed set of global singletons (see {@code DataMachineBlockEntity
+         *  #GLOBAL_SCRIPT_SINGLETONS}) that never change between calls, so there's no reason to
+         *  re-wrap each one via {@link #typed} (a fresh {@code ScriptValue.ofObj} allocation) every
+         *  single tick for every machine. */
+        public Builder typedAll(Map<String, ScriptValue> precomputed) {
+            if (precomputed != null) classes.putAll(precomputed);
             return this;
         }
 
@@ -111,8 +161,8 @@ public final class ScriptContext {
          * Binds a "Machine" class instance for whatever data-driven machine block entity sits at
          * {@code pos} (a no-op if none is loaded there) — for a script that needs to reach into a
          * block it just placed/found rather than the machine it's already running on, e.g. an
-         * item behavior's {@code on_place_block} handing item-carried flags/inventory onto the
-         * freshly placed block via {@code Machine.set_str_flag}/{@code push_item_to_inventory}.
+         * item behavior's {@code on_place_block} handing item-carried typed state/inventory onto
+         * the freshly placed block via {@code Machine.set_typed}/{@code push_item_to_inventory}.
          */
         public Builder machineAt(ServerLevel level, BlockPos pos) {
             if (level == null || pos == null) return this;
@@ -159,8 +209,11 @@ public final class ScriptContext {
             return this;
         }
 
+        // Deliberately does NOT bind a bare "facing" global — it collided with Machine.facing (now
+        // also removed) and was easy to shadow/misread against a script's own local var of the same
+        // name. Scripts read facing_dx/dy/dz below directly, or go through Machine.block.property
+        // ("facing")/("face") for the string form.
         public Builder facing(String facing, float facingYaw) {
-            vars.put("facing", ScriptValue.of(facing != null ? facing : "north"));
             vars.put("facing_angle", ScriptValue.of(facingYaw));
             int[] off = facingOffset(facing);
             vars.put("facing_dx", ScriptValue.of(off[0]));
@@ -175,8 +228,39 @@ public final class ScriptContext {
             return this;
         }
 
+        // MUST still be a real defensive copy, NOT a live view over this builder's own maps —
+        // ScriptProgram.runStatements calls build() repeatedly on the SAME builder while
+        // continuing to mutate it afterward (e.g. a FunctionDef snapshots definingCtx = b.build()
+        // and then later top-level statements keep calling b.val(...)); a live view would let that
+        // later mutation leak backward into the earlier "snapshot", corrupting lexical closures.
+        // What we DO avoid is Map.copyOf's specific overhead (entries-array + hash-probing
+        // ImmutableCollections.MapN construction, confirmed via profiling as ~7.6% of total
+        // server-thread time in the DataMachineBlockEntity.tick -> runActionScript hot path) —
+        // a plain LinkedHashMap copy-constructor is a real independent copy too, just without that
+        // immutable-map-specific construction cost.
         public ScriptContext build() {
-            return new ScriptContext(Map.copyOf(vars), Map.copyOf(classes));
+            return new ScriptContext(
+                java.util.Collections.unmodifiableMap(new LinkedHashMap<>(vars)),
+                java.util.Collections.unmodifiableMap(new LinkedHashMap<>(classes)));
+        }
+
+        /** Zero-copy "read this builder's CURRENT state right now" view — a live wrapper over this
+         *  builder's own {@code vars}/{@code classes} maps, NOT a defensive copy. Only safe where
+         *  the returned {@link ScriptContext} is read synchronously and then discarded BEFORE the
+         *  next mutation to this builder — e.g. {@code ScriptProgram.runStatements}' per-statement
+         *  "evaluate this one formula against current state" snapshots (an {@code Assign}'s RHS, an
+         *  {@code if}/{@code while} condition, a {@code for}'s iterable expr), which are consumed in
+         *  the same statement they're built for and never held onward. Do NOT use this for anything
+         *  captured long-term across future mutations (a {@code FunctionDef}'s {@code definingCtx}
+         *  closure, or a context returned out of {@code evaluate()} to a caller) — those need
+         *  {@link #build()}'s real copy, or a later mutation would silently corrupt them. Profiling
+         *  showed the per-statement {@code build()} calls in that hot loop (one full defensive copy
+         *  of the WHOLE accumulated context per statement, for a value read once and thrown away)
+         *  costing real server-thread time via {@code LinkedHashMap}'s copy-constructor. */
+        public ScriptContext peek() {
+            return new ScriptContext(
+                java.util.Collections.unmodifiableMap(vars),
+                java.util.Collections.unmodifiableMap(classes));
         }
 
         private static int[] facingOffset(String facing) {
